--- a/cabal.project
+++ b/cabal.project
@@ -28,6 +28,7 @@ packages:
          ./plugins/hls-qualify-imported-names-plugin
          ./plugins/hls-code-range-plugin
          ./plugins/hls-change-type-signature-plugin
+         ./plugins/hls-stan-plugin
          ./plugins/hls-gadt-plugin
 
 -- Standard location for temporary packages needed for particular environments
