--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -46,7 +46,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ghc: ['8.10.7']
+        ghc: ['8.10.7','9.0.2', '9.2.3']
         os: [ubuntu-latest]
 
     # This code is fitted to the strategy: assumes Linux is used ... etc,
