--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -103,7 +103,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ghc: ['8.10.7']
+        ghc: ['8.10.7', '9.2.3']
         os: [ubuntu-latest]
         cabal: ['3.6']
         example: ['cabal', 'lsp-types']
