--- a/ghcide/ghcide.cabal
+++ b/ghcide/ghcide.cabal
@@ -46,6 +46,7 @@ library
         binary,
         bytestring,
         case-insensitive,
+        co-log-core,
         containers,
         data-default,
         deepseq,
@@ -69,8 +70,8 @@ library
         lens,
         list-t,
         hiedb == 0.4.1.*,
-        lsp-types ^>= 1.4.0.1,
-        lsp ^>= 1.4.0.0 ,
+        lsp-types ^>= 1.5.0.0,
+        lsp ^>= 1.5.0.0 ,
         monoid-subclasses,
         mtl,
         network-uri,
@@ -81,7 +82,7 @@ library
         random,
         regex-tdfa >= 1.3.1.0,
         retrie,
-        rope-utf16-splay,
+        text-rope,
         safe,
         safe-exceptions,
         hls-graph ^>= 1.7,
