--- a/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
+++ b/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
@@ -23,7 +23,9 @@ source-repository head
   location: git://github.com/haskell/haskell-language-server.git
 
 library
-  exposed-modules:  Ide.Plugin.Fourmolu
+  exposed-modules:
+      Ide.Plugin.Fourmolu
+    , Ide.Plugin.Fourmolu.Shim
   hs-source-dirs:   src
   ghc-options:      -Wall
   build-depends:
