--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -140,24 +140,32 @@ jobs:
       run: |
         column -s, -t < ghcide/bench-results/unprofiled/${{ matrix.example }}/results.csv | tee ghcide/bench-results/unprofiled/${{ matrix.example }}/results.txt
 
+    - name: tar benchmarking artifacts
+      run: |
+        tar -czf benchmark-artifacts.tar.gz  \
+           ghcide/bench-results/results.*   \
+           ghcide/bench-results/**/*.csv    \
+           ghcide/bench-results/**/*.svg    \
+           ghcide/bench-results/**/*.eventlog.html
+
     - name: Archive benchmarking artifacts
       uses: actions/upload-artifact@v3
       with:
         name: bench-results-${{ runner.os }}-${{ matrix.ghc }}
-        path: |
-           ghcide/bench-results/results.*
-           ghcide/bench-results/**/*.csv
-           ghcide/bench-results/**/*.svg
-           ghcide/bench-results/**/*.eventlog.html
+        path: benchmark-artifacts.tar.gz
+
+    - name: tar benchmarking logs
+      run: |
+        tar -czf benchmark-logs.tar.gz \
+           ghcide/bench-results/**/*.log \
+           ghcide/bench-results/**/*.eventlog \
+           ghcide/bench-results/**/*.hp
 
     - name: Archive benchmark logs
       uses: actions/upload-artifact@v3
       with:
         name: bench-logs-${{ runner.os }}-${{ matrix.ghc }}
-        path: |
-           ghcide/bench-results/**/*.log
-           ghcide/bench-results/**/*.eventlog
-           ghcide/bench-results/**/*.hp
+        path: benchmark-logs.tar.gz
 
   bench_post_job:
     if: always()
