--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -141,12 +141,7 @@ jobs:
         column -s, -t < ghcide/bench-results/unprofiled/${{ matrix.example }}/results.csv | tee ghcide/bench-results/unprofiled/${{ matrix.example }}/results.txt
 
     - name: tar benchmarking artifacts
-      run: |
-        tar -czf benchmark-artifacts.tar.gz  \
-           ghcide/bench-results/results.*   \
-           ghcide/bench-results/**/*.csv    \
-           ghcide/bench-results/**/*.svg    \
-           ghcide/bench-results/**/*.eventlog.html
+      run:  find ghcide/bench-results -name "*.csv" -or -name "*.svg" -or -name "*.html" | xargs tar -czf benchmark-artifacts.tar.gz
 
     - name: Archive benchmarking artifacts
       uses: actions/upload-artifact@v3
@@ -155,11 +150,7 @@ jobs:
         path: benchmark-artifacts.tar.gz
 
     - name: tar benchmarking logs
-      run: |
-        tar -czf benchmark-logs.tar.gz \
-           ghcide/bench-results/**/*.log \
-           ghcide/bench-results/**/*.eventlog \
-           ghcide/bench-results/**/*.hp
+      run: find ghcide/bench-results -name "*.log" -or -name "*.eventlog" -or -name "*.hp" | xargs tar -czf benchmark-logs.tar.gz
 
     - name: Archive benchmark logs
       uses: actions/upload-artifact@v3
