--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -233,12 +233,6 @@ flag dynamic
   default:     True
   manual:      True
 
-common example-plugins
-  hs-source-dirs: plugins/default/src
-  other-modules: Ide.Plugin.Example,
-                 Ide.Plugin.Example2,
-                 Ide.Plugin.ExampleCabal
-
 common class
   if flag(class)
     build-depends: hls-class-plugin ^>= 1.0
@@ -366,13 +360,12 @@ common brittany
     build-depends: hls-brittany-plugin ^>= 1.0
     cpp-options: -Dhls_brittany
 
-executable haskell-language-server
+library plugins
   import:             common-deps
                     -- configuration
                     , warnings
                     , pedantic
                     -- plugins
-                    , example-plugins
                     , callHierarchy
                     , changeTypeSignature
                     , class
@@ -398,10 +391,20 @@ executable haskell-language-server
                     , ormolu
                     , stylishHaskell
                     , brittany
+  exposed-modules: HlsPlugins
+  hs-source-dirs: src
 
+  build-depends: ghcide, hls-plugin-api
+  default-language: Haskell2010
+  default-extensions: DataKinds, TypeOperators
+
+executable haskell-language-server
+  import:           common-deps
+                    -- configuration
+                  , warnings
+                  , pedantic
   main-is:          Main.hs
   hs-source-dirs:   exe
-  other-modules:    Plugins
 
   ghc-options:
     -threaded
@@ -412,8 +415,6 @@ executable haskell-language-server
     -- Enable collection of heap statistics
     "-with-rtsopts=-I0 -A128M -T"
     -Wno-unticked-promoted-constructors
-  if flag(pedantic)
-    ghc-options: -Werror
   if !os(windows) && flag(dynamic)
   -- We want to link against the dyn rts just like official GHC binaries do;
   --   the linked rts determines how external libs are loaded dynamically by TH.
@@ -438,6 +439,7 @@ executable haskell-language-server
     , ghcide
     , hashable
     , haskell-language-server
+    , haskell-language-server:plugins
     , lsp
     , hie-bios
     , hiedb
