--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -85,14 +85,14 @@ jobs:
     - name: Upload workspace
       uses: actions/upload-artifact@v3
       with:
-        name: workspace
+        name: workspace-${{ matrix.ghc }}-${{ matrix.os }}
         retention-days: 1
         path: workspace.tar.gz
 
     - name: Upload .cabal
       uses: actions/upload-artifact@v3
       with:
-        name: cabal-home
+        name: cabal-home-${{ matrix.ghc }}-${{ matrix.os }}
         retention-days: 1
         path: ~/.cabal/cabal.tar.gz
 
@@ -118,13 +118,13 @@ jobs:
     - name: Download cabal home
       uses: actions/download-artifact@v3
       with:
-        name: cabal-home
+        name: cabal-home-${{ matrix.ghc }}-${{ matrix.os }}
         path: .
 
     - name: Download workspace
       uses: actions/download-artifact@v3
       with:
-        name: workspace
+        name: workspace-${{ matrix.ghc }}-${{ matrix.os }}
         path: .
 
     - name: untar
@@ -146,7 +146,7 @@ jobs:
     - name: Archive benchmarking artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: bench-results-${{ runner.os }}-${{ matrix.ghc }}
+        name: bench-results-${{ matrix.example }}-${{ runner.os }}-${{ matrix.ghc }}
         path: benchmark-artifacts.tar.gz
 
     - name: tar benchmarking logs
@@ -155,7 +155,7 @@ jobs:
     - name: Archive benchmark logs
       uses: actions/upload-artifact@v3
       with:
-        name: bench-logs-${{ runner.os }}-${{ matrix.ghc }}
+        name: bench-logs-${{ matrix.example }}-${{ runner.os }}-${{ matrix.ghc }}
         path: benchmark-logs.tar.gz
 
   bench_post_job:
