--- a/plugins/hls-alternate-number-format-plugin/hls-alternate-number-format-plugin.cabal
+++ b/plugins/hls-alternate-number-format-plugin/hls-alternate-number-format-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.4
 name:               hls-alternate-number-format-plugin
-version:            1.1.0.1
+version:            1.2.0.0
 synopsis:           Provide Alternate Number Formats plugin for Haskell Language Server
 description:
   Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>
@@ -27,13 +27,13 @@ library
       aeson
     , base                 >=4.12 && < 5
     , containers
-    , ghcide               ^>=1.6 || ^>=1.7
+    , ghcide               ^>= 1.8
     , ghc-boot-th
     , hls-graph
-    , hls-plugin-api       ^>=1.4
+    , hls-plugin-api       ^>= 1.5
     , hie-compat
     , lens
-    , lsp
+    , lsp                  ^>=1.6
     , mtl
     , regex-tdfa
     , syb
@@ -59,7 +59,7 @@ test-suite tests
     , base                 >=4.12 && < 5
     , filepath
     , hls-alternate-number-format-plugin
-    , hls-test-utils       ^>=1.3
+    , hls-test-utils       ^>=1.3 || ^>= 1.4
     , lsp
     , QuickCheck
     , regex-tdfa
