--- a/plugins/hls-call-hierarchy-plugin/hls-call-hierarchy-plugin.cabal
+++ b/plugins/hls-call-hierarchy-plugin/hls-call-hierarchy-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.4
 name:               hls-call-hierarchy-plugin
-version:            1.0.3.1
+version:            1.1.0.0
 synopsis:           Call hierarchy plugin for Haskell Language Server
 description:
   Please see the README on GitHub at <https://github.com/haskell/haskell-language-server/tree/master/plugins/hls-call-hierarchy-plugin#readme>
@@ -31,9 +31,9 @@ library
     , containers
     , extra
     , ghc
-    , ghcide                ^>= 1.6 || ^>= 1.7
+    , ghcide                ^>= 1.8
     , hiedb
-    , hls-plugin-api        ^>= 1.2 || ^>= 1.3 || ^>= 1.4
+    , hls-plugin-api        ^>= 1.5
     , lens
     , lsp                    >=1.2.0.1
     , sqlite-simple
@@ -57,7 +57,7 @@ test-suite tests
     , extra
     , filepath
     , hls-call-hierarchy-plugin
-    , hls-test-utils              ^>=1.3
+    , hls-test-utils              ^>=1.4
     , lens
     , lsp
     , lsp-test
