--- a/plugins/hls-code-range-plugin/hls-code-range-plugin.cabal
+++ b/plugins/hls-code-range-plugin/hls-code-range-plugin.cabal
@@ -35,9 +35,9 @@ library
     , containers
     , deepseq
     , extra
-    , ghcide           ^>=1.6 || ^>=1.7
+    , ghcide           ^>=1.8
     , hashable
-    , hls-plugin-api   ^>=1.3 || ^>=1.4
+    , hls-plugin-api   ^>=1.5
     , lens
     , lsp
     , mtl
@@ -60,9 +60,9 @@ test-suite tests
     , bytestring
     , containers
     , filepath
-    , ghcide                     ^>=1.6 || ^>=1.7
+    , ghcide                     ^>=1.8
     , hls-code-range-plugin
-    , hls-test-utils             ^>=1.2 || ^>=1.3
+    , hls-test-utils             ^>=1.4
     , lens
     , lsp
     , lsp-test
