--- a/plugins/hls-explicit-imports-plugin/hls-explicit-imports-plugin.cabal
+++ b/plugins/hls-explicit-imports-plugin/hls-explicit-imports-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.2
 name:               hls-explicit-imports-plugin
-version:            1.1.0.0
+version:            1.1.0.1
 synopsis:           Explicit imports plugin for Haskell Language Server
 description:
   Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>
@@ -25,9 +25,9 @@ library
     , containers
     , deepseq
     , ghc
-    , ghcide                ^>=1.7
+    , ghcide                ^>=1.7 || ^>=1.8
     , hls-graph
-    , hls-plugin-api        ^>=1.4
+    , hls-plugin-api        ^>=1.4 || ^>=1.5
     , lsp
     , text
     , unordered-containers
