--- a/plugins/hls-floskell-plugin/hls-floskell-plugin.cabal
+++ b/plugins/hls-floskell-plugin/hls-floskell-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.4
 name:               hls-floskell-plugin
-version:            1.0.1.1
+version:            1.0.1.2
 synopsis:           Integration with the Floskell code formatter
 description:
   Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>
@@ -26,9 +26,9 @@ library
   build-depends:
     , base            >=4.12 && <5
     , floskell        ^>=0.10
-    , ghcide          ^>=1.6 || ^>=1.7
-    , hls-plugin-api  ^>=1.3 || ^>=1.4
-    , lsp-types
+    , ghcide          ^>=1.6 || ^>=1.7 || ^>= 1.8
+    , hls-plugin-api  ^>=1.3 || ^>=1.4 || ^>= 1.5
+    , lsp-types       ^>=1.6
     , text
     , transformers
 
@@ -48,4 +48,4 @@ test-suite tests
     , base
     , filepath
     , hls-floskell-plugin
-    , hls-test-utils       ^>=1.3
+    , hls-test-utils       ^>=1.3 || ^>= 1.4
