--- a/plugins/hls-haddock-comments-plugin/hls-haddock-comments-plugin.cabal
+++ b/plugins/hls-haddock-comments-plugin/hls-haddock-comments-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.4
 name:               hls-haddock-comments-plugin
-version:            1.0.1.0
+version:            1.1.0.0
 synopsis:           Haddock comments plugin for Haskell Language Server
 description:
   Please see the README on GitHub at <https://github.com/haskell/haskell-language-server>
@@ -33,8 +33,8 @@ library
     , containers
     , ghc
     , ghc-exactprint        < 1
-    , ghcide                ^>=1.6 || ^>=1.7
-    , hls-plugin-api        ^>=1.3 || ^>=1.4
+    , ghcide                ^>=1.8
+    , hls-plugin-api        ^>=1.5
     , hls-refactor-plugin
     , lsp-types
     , text
@@ -59,5 +59,5 @@ test-suite tests
     , base
     , filepath
     , hls-haddock-comments-plugin
-    , hls-test-utils               ^>=1.2 || ^>=1.3
+    , hls-test-utils               ^>=1.2 || ^>=1.3 || ^>= 1.4
     , text
