--- a/plugins/hls-ormolu-plugin/hls-ormolu-plugin.cabal
+++ b/plugins/hls-ormolu-plugin/hls-ormolu-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.4
 name:               hls-ormolu-plugin
-version:            1.0.2.1
+version:            1.0.2.2
 synopsis:           Integration with the Ormolu code formatter
 description:
   Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>
@@ -28,8 +28,8 @@ library
     , filepath
     , ghc
     , ghc-boot-th
-    , ghcide          ^>=1.6 || ^>=1.7
-    , hls-plugin-api  ^>=1.3 || ^>=1.4
+    , ghcide          ^>=1.6 || ^>=1.7 || ^>= 1.8
+    , hls-plugin-api  ^>=1.3 || ^>=1.4 || ^>= 1.5
     , lens
     , lsp
     , ormolu          ^>=0.1.2 || ^>= 0.2 || ^>= 0.3 || ^>= 0.5
@@ -51,5 +51,5 @@ test-suite tests
     , base
     , filepath
     , hls-ormolu-plugin
-    , hls-test-utils     ^>=1.3
+    , hls-test-utils     ^>=1.3 || ^>=1.4
     , lsp-types
