--- a/plugins/hls-qualify-imported-names-plugin/hls-qualify-imported-names-plugin.cabal
+++ b/plugins/hls-qualify-imported-names-plugin/hls-qualify-imported-names-plugin.cabal
@@ -18,7 +18,6 @@ extra-source-files:
   test/data/*.yaml
 
 library
-  buildable: True
   exposed-modules:    Ide.Plugin.QualifyImportedNames
   hs-source-dirs:     src
   build-depends:
@@ -27,9 +26,9 @@ library
     , containers
     , deepseq
     , ghc
-    , ghcide                ^>=1.6 || ^>=1.7
+    , ghcide                ^>=1.6 || ^>=1.7 || ^>= 1.8
     , hls-graph
-    , hls-plugin-api        ^>=1.3 || ^>=1.4
+    , hls-plugin-api        ^>=1.3 || ^>=1.4 || ^>= 1.5
     , lsp
     , text
     , unordered-containers
@@ -42,7 +41,6 @@ library
     TypeOperators
 
 test-suite tests
-  buildable: True
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
@@ -53,4 +51,4 @@ test-suite tests
     , text
     , filepath
     , hls-qualify-imported-names-plugin
-    , hls-test-utils             ^>= 1.2 || ^>=1.3
+    , hls-test-utils             ^>= 1.2 || ^>=1.3 || ^>= 1.4
