--- a/plugins/hls-refactor-plugin/hls-refactor-plugin.cabal
+++ b/plugins/hls-refactor-plugin/hls-refactor-plugin.cabal
@@ -63,8 +63,8 @@ library
     , ghc-boot
     , regex-tdfa
     , text-rope
-    , ghcide                ^>=1.7
-    , hls-plugin-api        ^>=1.3 || ^>=1.4
+    , ghcide                ^>=1.8
+    , hls-plugin-api        ^>=1.3 || ^>=1.4 || ^>= 1.5
     , lsp
     , text
     , transformers
@@ -98,7 +98,7 @@ test-suite tests
     , base
     , filepath
     , hls-refactor-plugin
-    , hls-test-utils      ^>=1.3
+    , hls-test-utils      ^>=1.4
     , lens
     , lsp-types
     , text
