--- a/plugins/hls-rename-plugin/hls-rename-plugin.cabal
+++ b/plugins/hls-rename-plugin/hls-rename-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.4
 name:               hls-rename-plugin
-version:            1.0.0.2
+version:            1.0.1.0
 synopsis:           Rename plugin for Haskell Language Server
 description:
   Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>
@@ -29,10 +29,10 @@ library
     , extra
     , ghc
     , ghc-exactprint
-    , ghcide                ^>= 1.6 || ^>=1.7
+    , ghcide                ^>=1.8
     , hashable
     , hiedb
-    , hls-plugin-api        ^>= 1.3 || ^>=1.4
+    , hls-plugin-api        ^>= 1.3 || ^>=1.4 || ^>= 1.5
     , hls-refactor-plugin
     , lsp
     , lsp-types
@@ -61,4 +61,4 @@ test-suite tests
     , filepath
     , hls-plugin-api
     , hls-rename-plugin
-    , hls-test-utils             ^>=1.3
+    , hls-test-utils             ^>=1.4
