--- a/plugins/hls-stan-plugin/hls-stan-plugin.cabal
+++ b/plugins/hls-stan-plugin/hls-stan-plugin.cabal
@@ -70,7 +70,7 @@ test-suite test
     , filepath
     , hls-stan-plugin
     , hls-plugin-api
-    , hls-test-utils      ^>=1.3
+    , hls-test-utils      ^>=1.3 || ^>= 1.4
     , lens
     , lsp-types
     , text
