--- a/plugins/hls-stylish-haskell-plugin/hls-stylish-haskell-plugin.cabal
+++ b/plugins/hls-stylish-haskell-plugin/hls-stylish-haskell-plugin.cabal
@@ -28,8 +28,8 @@ library
     , filepath
     , ghc
     , ghc-boot-th
-    , ghcide           ^>=1.7
-    , hls-plugin-api   ^>=1.4
+    , ghcide           ^>=1.7 || ^>= 1.8
+    , hls-plugin-api   ^>=1.4 || ^>= 1.5
     , lsp-types
     , stylish-haskell  ^>=0.12 || ^>=0.13 || ^>=0.14.2
     , text
@@ -50,4 +50,4 @@ test-suite tests
     , base
     , filepath
     , hls-stylish-haskell-plugin
-    , hls-test-utils              ^>=1.3
+    , hls-test-utils              ^>=1.3 || ^>=1.4
