--- a/plugins/hls-tactics-plugin/hls-tactics-plugin.cabal
+++ b/plugins/hls-tactics-plugin/hls-tactics-plugin.cabal
@@ -38,45 +38,68 @@ library
     buildable: False
   else
     buildable: True
-
-  if impl(ghc >= 9.2.1)
+  if impl(ghc >= 9.2)
     hs-source-dirs:     new/src
+    exposed-modules:
+      Ide.Plugin.Tactic
+      Refinery.Future
+      Wingman.AbstractLSP
+      Wingman.AbstractLSP.TacticActions
+      Wingman.AbstractLSP.Types
+      Wingman.CaseSplit
+      Wingman.CodeGen
+      Wingman.CodeGen.Utils
+      Wingman.Debug
+      Wingman.EmptyCase
+      Wingman.GHC
+      Wingman.Judgements
+      Wingman.Judgements.SYB
+      Wingman.LanguageServer
+      Wingman.LanguageServer.TacticProviders
+      Wingman.Machinery
+      Wingman.Naming
+      Wingman.Plugin
+      Wingman.Range
+      Wingman.Simplify
+      Wingman.StaticPlugin
+      Wingman.Tactics
+      Wingman.Types
   else
     hs-source-dirs:     old/src
-  exposed-modules:
-    Ide.Plugin.Tactic
-    Refinery.Future
-    Wingman.AbstractLSP
-    Wingman.AbstractLSP.TacticActions
-    Wingman.AbstractLSP.Types
-    Wingman.Auto
-    Wingman.CaseSplit
-    Wingman.CodeGen
-    Wingman.CodeGen.Utils
-    Wingman.Context
-    Wingman.Debug
-    Wingman.EmptyCase
-    Wingman.GHC
-    Wingman.Judgements
-    Wingman.Judgements.SYB
-    Wingman.Judgements.Theta
-    Wingman.KnownStrategies
-    Wingman.KnownStrategies.QuickCheck
-    Wingman.LanguageServer
-    Wingman.LanguageServer.Metaprogram
-    Wingman.LanguageServer.TacticProviders
-    Wingman.Machinery
-    Wingman.Metaprogramming.Lexer
-    Wingman.Metaprogramming.Parser
-    Wingman.Metaprogramming.Parser.Documentation
-    Wingman.Metaprogramming.ProofState
-    Wingman.Naming
-    Wingman.Plugin
-    Wingman.Range
-    Wingman.Simplify
-    Wingman.StaticPlugin
-    Wingman.Tactics
-    Wingman.Types
+    exposed-modules:
+      Ide.Plugin.Tactic
+      Refinery.Future
+      Wingman.AbstractLSP
+      Wingman.AbstractLSP.TacticActions
+      Wingman.AbstractLSP.Types
+      Wingman.Auto
+      Wingman.CaseSplit
+      Wingman.CodeGen
+      Wingman.CodeGen.Utils
+      Wingman.Context
+      Wingman.Debug
+      Wingman.EmptyCase
+      Wingman.GHC
+      Wingman.Judgements
+      Wingman.Judgements.SYB
+      Wingman.Judgements.Theta
+      Wingman.KnownStrategies
+      Wingman.KnownStrategies.QuickCheck
+      Wingman.LanguageServer
+      Wingman.LanguageServer.Metaprogram
+      Wingman.LanguageServer.TacticProviders
+      Wingman.Machinery
+      Wingman.Metaprogramming.Lexer
+      Wingman.Metaprogramming.Parser
+      Wingman.Metaprogramming.Parser.Documentation
+      Wingman.Metaprogramming.ProofState
+      Wingman.Naming
+      Wingman.Plugin
+      Wingman.Range
+      Wingman.Simplify
+      Wingman.StaticPlugin
+      Wingman.Tactics
+      Wingman.Types
 
   ghc-options:
     -Wall -Wno-name-shadowing -Wredundant-constraints
@@ -150,22 +173,39 @@ test-suite tests
     buildable: True
   type:               exitcode-stdio-1.0
   main-is:            Main.hs
-  other-modules:
-    AutoTupleSpec
-    CodeAction.AutoSpec
-    CodeAction.DestructAllSpec
-    CodeAction.DestructPunSpec
-    CodeAction.DestructSpec
-    CodeAction.IntrosSpec
-    CodeAction.IntroDestructSpec
-    CodeAction.RefineSpec
-    CodeAction.RunMetaprogramSpec
-    CodeAction.UseDataConSpec
-    CodeLens.EmptyCaseSpec
-    ProviderSpec
-    Spec
-    UnificationSpec
-    Utils
+  if impl(ghc >= 9.2)
+    hs-source-dirs:     new/test
+    other-modules:
+      CodeAction.DestructAllSpec
+      CodeAction.DestructPunSpec
+      CodeAction.DestructSpec
+      CodeAction.IntrosSpec
+      CodeAction.IntroDestructSpec
+      CodeAction.RefineSpec
+      CodeAction.UseDataConSpec
+      CodeLens.EmptyCaseSpec
+      ProviderSpec
+      Spec
+      UnificationSpec
+      Utils
+  else
+    hs-source-dirs:     old/test
+    other-modules:
+      AutoTupleSpec
+      CodeAction.AutoSpec
+      CodeAction.DestructAllSpec
+      CodeAction.DestructPunSpec
+      CodeAction.DestructSpec
+      CodeAction.IntrosSpec
+      CodeAction.IntroDestructSpec
+      CodeAction.RefineSpec
+      CodeAction.RunMetaprogramSpec
+      CodeAction.UseDataConSpec
+      CodeLens.EmptyCaseSpec
+      ProviderSpec
+      Spec
+      UnificationSpec
+      Utils
 
   if impl(ghc >= 9.2.1)
     hs-source-dirs: new/test
