--- a/plugins/hls-explicit-record-fields-plugin/hls-explicit-record-fields-plugin.cabal
+++ b/plugins/hls-explicit-record-fields-plugin/hls-explicit-record-fields-plugin.cabal
@@ -39,6 +39,7 @@ library
       , ghc-boot-th
       , unordered-containers
       , containers
+      , extra
     hs-source-dirs:   src
     default-language: Haskell2010
 
